# agmsg-tui

./: .gitignore  CODEX_DONE.txt  Cargo.toml  ERROR_LOG.md  LICENSE  PROGRESS.md  README.md
src/: agents.rs  app.rs  audit.rs  audit_history.rs  bulk.rs  clipboard.rs  color.rs  config.rs  db.rs  exec.rs  health.rs  highlight.rs  keys.rs  launchagent.rs  lib.rs  main.rs  notify.rs  palette.rs  pane.rs  poll.rs  remote.rs  state.rs  timefmt.rs  width.rs
src/ui/: agents.rs  audit.rs  audit_history.rs  bulk_filter.rs  bulk_preview.rs  composer.rs  health.rs  main_screen.rs  mod.rs  notification_settings.rs
tests/: db_test.rs  highlight_test.rs  keybind_test.rs  mouse_test.rs  palette_test.rs  replay_test.rs  split_view_test.rs
