[package]
name = "agmsg-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.28.1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
tokio = { version = "1", features = ["rt", "time", "process", "macros", "sync"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
# Pinned to the 0.1 line ratatui already pulls in transitively (see
# Cargo.lock) so this doesn't add a second unicode-width version to the tree.
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3"
